# oci-dockworker-build-oss

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/: CODEOWNERS
.github/actions/asset-mime-smoke/: action.yml
.github/actions/build-push-bun/: action.yml
.github/actions/setup-attic-cache/: action.yml
.github/actions/setup-buildx-bun/: action.yml
.github/scripts/: validate-docs.ts
.github/workflows/: ci-docs.yml  ci.yml  oci-build.yaml
scripts/: validate-nix-outputs.sh
src/: dockworker.rs  main.rs  sync.rs  validate.rs
