[package]
name = "propel-tools"
version = "0.1.0"
edition = "2021"
description = "Rust tooling for the oci-dockworker-build build matrix: generate agent build entries and validate Propel config + Kustomize manifests (replaces the former Python/uv scripts)."
license = "MIT"
publish = false

[[bin]]
name = "propel-tools"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"

[profile.release]
opt-level = 2
